Fix the auto-wrap of long phase for Navigation Item

--- a/FrontEnd/frontend/src/Components/NavigationItems/NavigationItems.module.css
+++ b/FrontEnd/frontend/src/Components/NavigationItems/NavigationItems.module.css
@@ -6,6 +6,7 @@
   flex-flow: column;
   align-items: center;
   height: 100%;
+   white-space:nowrap;
 }
 
 .Upload{
